# interview-agent

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json
app/: __init__.py  data.py  database.py  interview_engine.py  llm.py  main.py  schemas.py  speech.py  workflow.py
docs/: CHANGELOG.md  TODO.md  api.md  architecture.md  coding-guidelines.md  overview.md  references.md  testing.md
scripts/: fix-node-bin-permissions.sh
src/: App.test.tsx  App.tsx  styles.css
tests/: test_history_api.py  test_sessions_api.py
