[project]
name = "awesome-interview-agent"
version = "0.1.0"
description = "Web MVP for a local single-user AI interview simulator"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
